[project]
name = "audtag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "beautifulsoup4>=4.13.5",
    "click>=8.2.1",
    "inquirer>=3.4.1",
    "mutagen>=1.47.0",
    "pytest>=8.4.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "rich>=14.1.0",
]
